# creo2urdf

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml  vcpkg.json
.github/workflows/: dipatch-ci.yml  dispatch-ci.yml  gh-pages.yml
CHANGELOG/: index.html
doc/: Doxyfile.txt  doc-compile.sh
doc/doxygen/: Doxyfile.txt  doc-compile.sh
doc/doxygen/doc/html/: Creo2Urdf_8h.html  Creo2Urdf_8h.js  Creo2Urdf_8h_source.html  ElementTreeManager_8h.html  ElementTreeManager_8h.js  ElementTreeManager_8h_source.html  Sensorizer_8h.html  Sensorizer_8h.js  Sensorizer_8h_source.html  Utils_8h.html  Utils_8h.js  Utils_8h_source.html  Validator_8h.html  Validator_8h.js  Validator_8h_source.html  annotated.html  annotated_dup.js  bug.html  classCreo2Urdf-members.html  classCreo2Urdf.html  classCreo2Urdf.js  classCreo2UrdfAccess-members.html  classCreo2UrdfAccess.html  classCreo2UrdfAccess.js  classElementTreeManager-members.html  classElementTreeManager.html  classElementTreeManager.js  classValidator-members.html  classValidator.html  classValidator.js  classValidatorAccess-members.html  classValidatorAccess.html  classValidatorAccess.js  classes.html  classiDynRedirectErrors-members.html  classiDynRedirectErrors.html  classiDynRedirectErrors.js  dir_0fa3b095bc8f400d5bc0afb1e8648077.html  dir_0fa3b095bc8f400d5bc0afb1e8648077.js  dir_121ed828b8d71e19839ebcb1814c53b1.html  (+50 more)
doc/doxygen/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+49 more)
doc/mkdocs/: site-compile.sh
examples/2bars/: 2bars.asm  2bars.csv  2bars.yaml  2bars_fixed_1.asm.1  2bars_fixed_1.yaml  2bars_pin.asm.1  2bars_pin.yaml  2bars_pin_2.asm.1  2bars_pin_2.yaml  2bars_prismatic.asm.1  2bars_prismatic.yaml  bar.prt  bar.prt.1  bar_1.prt.1  bar_2.prt.1  bar_3.prt.1  barlonger.prt  barlonger.prt.1  barlonger_1.prt.1  barlonger_2.prt.1  barlonger_3.prt.1  joints_assembled.asm.1
scripts/: run_creo2urdf.ps1
src/: CMakeLists.txt
src/creo2urdf/: CMakeLists.txt  config.pro
src/creo2urdf/include/creo2urdf/: Creo2Urdf.h  ElementTreeManager.h  Sensorizer.h  Utils.h  Validator.h
src/creo2urdf/src/: Creo2Urdf.cpp  ElementTreeManager.cpp  Sensorizer.cpp  Utils.cpp  Validator.cpp  main.cpp
src/creo2urdf/text/: creo2urdf.txt
src/creo2urdf/text/ribbon/: creo2urdf.rbn  toolkitribbonui.rbn
src/creo2urdf/text/usascii/: creo2urdf.txt  messages.txt  ui.txt
src/examples/creopyson/: creopyson_example.py
src/examples/otk_toolkit_cpp/: README.md
src/examples/otk_toolkit_cpp/Creo9_x64_tkSynctemplate_DLL/: Creo_x64_tktemplate.VC.db  Creo_x64_tktemplate.sln
src/examples/otk_toolkit_cpp/Creo9_x64_tkSynctemplate_DLL/Creo_x64_tktemplate/: Creo_x64_tktemplate.vcxproj  Creo_x64_tktemplate.vcxproj.filters  PTTestBug.cpp  old_PTTestBug.cpp
src/examples/otk_toolkit_cpp/Creo9_x64_tkSynctemplate_DLL/text/: pt_bug.txt
src/examples/otk_toolkit_cpp/Creo9_x64_tkSynctemplate_DLL/x64/Debug/: pt_bug.exp
src/examples/otk_toolkit_cpp/otk_examples/: std.err  std.out  support.inf.1  trail.txt.1  trail.txt.10  trail.txt.2  trail.txt.3  trail.txt.4  trail.txt.5  trail.txt.6  trail.txt.7  trail.txt.8  trail.txt.9
src/examples/otk_toolkit_cpp/otk_examples/otk_install/: OTKXAssemblyItemOperations.cxx  OTKXAssemblyItemUtils.cxx  OTKXCombinedState.cxx  OTKXCreateIntfData.cxx  OTKXCreateSweep.cxx  OTKXEnum.cxx  OTKXFamilyTableUtils.cxx  OTKXGeometryUtils.cxx  OTKXLayerState.cxx  OTKXLayerStateUtils.cxx  OTKXLights.cxx  OTKXListFeatures.cxx  OTKXMain.cxx  OTKXModelItemsVisiting.cxx  OTKXModelUtils.cxx  OTKXRasterExport.cxx  OTKXSessionUtils.cxx  OTKXSolidActionListener.cxx  OTKXUDF.cxx  OTKXUIFCDialog.cxx  OTKXWriteFeatAsCxx.cxx  otk_examples_asm.cxx  otk_examples_cip.cxx  otk_examples_drw.cxx  otk_examples_feat.cxx  otk_examples_graphics.cxx  otk_examples_server.cxx  otk_examples_solid.cxx  otk_install.vcxproj  otk_install.vcxproj.filters
src/examples/otk_toolkit_cpp/otk_examples/otk_install/includes/: OTKXCrossSection.h  OTKXEnum.h  OTKXSaveIntfDataCxx.h  OTKXUIFCDialog.h
src/examples/otk_toolkit_cpp/otk_examples/text/ribbon/: otkExamples.rbn
src/examples/otk_toolkit_cpp/otk_examples/text/usascii/: TabSwitch.txt  combstate_msg.txt  dwg.txt  feat_ops.txt  layer_state.txt  lights_example_msg.txt  message.txt  xsection_example_msg.txt
src/examples/otk_toolkit_cpp/otk_examples/x64/Debug/: otk_install.exp
src/examples/otk_toolkit_cpp/otk_install/: creotk.dat.bk  otk_install.sln  trail.txt.1
src/examples/otk_toolkit_cpp/otk_install/Debug/otk_install.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  otk_install.lastbuildstate
src/examples/otk_toolkit_cpp/otk_install/otk_install/: OTKMultiBody.cxx  OTKTestInstall.cxx  OTKXCombStateUtils.cxx  OTKXCreateSection2D.cxx  OTKXCreateSection3D.cxx  OTKXCrossSection.cxx  OTKXDrawing.cxx  OTKXFamilyMember.cxx  OTKXFamilyTable.cxx  OTKXFeatureOperations.cxx  OTKXIntfDataUtils.cxx  OTKXMain.cxx  OTKXQuickPrint.cxx  OTKXSaveFeatUtils.cxx  OTKXServerOperations.cxx  OTKXString.cxx  OTKXUIFCNakedWin.cxx  otk_examples_interface.cxx  otk_examples_main.cxx  otk_examples_model.cxx  otk_examples_ui.cxx  otk_examples_utils.cxx  otk_install.vcxproj  otk_install.vcxproj.filters
src/examples/otk_toolkit_cpp/otk_install/otk_install/includes/: OTKMultiBody.h  OTKXAssemblyItemUtils.h  OTKXGraphics.h  OTKXSaveFeatCxx.h  OTKXUIFCNakedWin.h  OTKXUtils.h
src/examples/otk_toolkit_cpp/otk_install/otk_install/otk_install.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
tests/: CMakeLists.txt  creo2urdf-model-test.cpp
twolinks/: 2bars.asm.1  bar.prt.1  bar.prt.2  barlonger.prt.1
(+56 files in other folders)
